test/tests/compiler/16_characters_and_strings/invalid_types/negate_char_pointer.plx
#  You can't negate pointers, including pointers to char 
pub fn main(none) i32 {
    x: *char = "foo"
    return -x
}
